Added publishResultsDate, examStudentReviewStart, examStudentReviewEnd fields to Exam (#1830)

--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -19,6 +19,9 @@
             "visible": "Visible",
             "startDate": "Start Date",
             "endDate": "End Date",
+            "publishResultsDate": "Release Date of Results",
+            "examStudentReviewStart": "Begin of Student Review",
+            "examStudentReviewEnd": "End of Student Review",
             "duration": "Duration",
             "nrOfStudents": "Registered Students",
             "created": "New exam created",
@@ -128,6 +131,9 @@
             "visibleDate": "Visible from",
             "startDate": "Start of working time",
             "endDate": "End of working time",
+            "publishResultsDate": "Release Date of Results",
+            "examStudentReviewStart": "Begin of Student Review",
+            "examStudentReviewEnd": "End of Student Review",
             "maxPoints": "Maximum number of points in exam",
             "numberOfExercisesInExam": "Number of exercises in exam",
             "randomizeQuestionOrder": "Randomize order of exercise groups",
