--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -9,6 +9,7 @@
             "examSummary": {
                 "yourSubmissionTo": "Your submission to {{examTitle}} ({{studentName}})",
                 "exportPDF": "Export PDF",
+                "noSubmissionFound": "You didn't submit any solution for this exercise.",
                 "lastCommitHash": "Last Commit Hash",
                 "noCommitHash": "Reload to get the commit hash.",
                 "studentSubmissionTo": "{{studentName}}'s submission to {{examTitle}}"
@@ -71,6 +72,9 @@
             "submitOtherExercise": "Save & continue",
             "submitLastExercise": "Save",
             "greeting": "Hello {{ fullName }}, welcome to \"{{ title }}\"",
+            "preparingParticipation": "Preparing exercise. This may take a few seconds.",
+            "generateParticipationFailed": "The preparation of the exercise failed.",
+            "generateParticipationRetry": "Retry",
             "points": "points",
             "synced": "Exercise saved",
             "notSynced": "Exercise not saved",
