--- a/src/main/webapp/i18n/de/exercise.json
+++ b/src/main/webapp/i18n/de/exercise.json
@@ -143,7 +143,7 @@
                 }
             },
             "exam": "Klausur",
-            "setDatesFromExam": "Set Dates From Exam"
+            "setDatesFromExam": "Datumsfelder der Klausur übernehmen"
         },
         "exerciseLtiConfiguration": {
             "lti": "LTI",
