--- a/src/main/webapp/i18n/en/result.json
+++ b/src/main/webapp/i18n/en/result.json
@@ -46,8 +46,7 @@
             "notGraded": "Not graded",
             "preliminary": "(preliminary)",
             "preliminaryTooltip": "Your result is not final. More tests will be executed after the exercise's due date.",
-            "noResultDetails": "No result details available.",
-            "assessedTwice": "Assessed Twice"
+            "noResultDetails": "No result details available."
         }
     }
 }
