--- a/src/main/webapp/i18n/en/editor.json
+++ b/src/main/webapp/i18n/en/editor.json
@@ -91,6 +91,7 @@
                 "repositoryInConflict": "Your repository has entered a conflict state.",
                 "notAllowedExam": "You must not submit (anymore)",
                 "connectionTimeoutSave": "Saving failed. Please make sure you have a stable internet connection and try again.",
+                "undefined": "Action failed. Please make sure you have a stable internet connection and try again.",
                 "connectionTimeoutRefresh": "Refreshing failed. Please make sure you have a stable internet connection and try again."
             },
             "testStatusLabels": {
