--- a/src/main/webapp/i18n/de/instructorDashboard.json
+++ b/src/main/webapp/i18n/de/instructorDashboard.json
@@ -37,7 +37,7 @@
         "exportSubmissions": {
             "title": "Abgaben exportieren",
             "downloadAllStudents": "Oder lade die Abgaben aller Studenten herunter",
-            "question": "Tragen sie hier alle Kennungen der Studenten ein, die heruntergeladen werden sollen getrennt durch ein Komma (z.B. ga87fix,ga63dut)",
+            "question": "Tragen sie hier alle Kennungen der Studenten getrennt durch ein Komma ein, deren Abgaben heruntergeladen werden sollen (z.B. ga87fix,ga63dut)",
             "filterLateSubmissions": "Verspätete Abgaben herausfiltern",
             "filterLateSubmissionsDate": "Datum zum Filtern verspäteter Abgaben (standardmäßig Einreichungsfrist der Aufgabe)",
             "successMessage": "Die Abgaben wurden erfolgreich exportiert. Die generierte Zip-Datei wird jetzt heruntergeladen."
