--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -232,5 +232,9 @@
             "workingTimeCouldNotBeSaved": "The working time could not be saved.",
             "saveWorkingTimeSuccessful": "The working time was saved successfully."
         }
+    },
+    "studentExam": {
+        "alreadySubmitted": "You have already submitted.",
+        "submissionNotInTime": "You can only submit between start and end of the exam."
     }
 }
