--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -74,7 +74,8 @@
             "submitProgrammingExercise": "Weiter",
             "submitOtherExercise": "Speichern & Weiter",
             "submitLastExercise": "Speichern",
-            "greeting": "Hallo {{ fullName }}, willkommen zu \"{{ title }}\"",
+            "greeting": "Hallo {{ fullName }}, willkommen zu {{ title }}",
+            "finish": "Hallo {{ fullName }}, das ist das Ende von {{ title }} ",
             "preparingParticipation": "Aufgabe wird vorbereitet. Dies kann ein paar Sekunden dauern.",
             "generateParticipationFailed": "Das Vorbereiten der Aufgabe ist fehlgeschlagen.",
             "generateParticipationRetry": "Erneut versuchen",
@@ -233,5 +234,9 @@
             "workingTimeCouldNotBeSaved": "Die Bearbeitungszeit konnte nicht gespeichert werden.",
             "saveWorkingTimeSuccessful": "Die Bearbeitungszeit wurde erfolgreich gespeichert."
         }
+    },
+    "studentExam": {
+        "alreadySubmitted": "Du hast bereits abgegeben.",
+        "submissionNotInTime": "Du kannst nur zwischen Start und Ende der Klausur abgeben."
     }
 }
