--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -85,7 +85,8 @@
             "submitted": "Exercise submitted",
             "notSubmitted": "Exercise not submitted",
             "saveSubmissionError": "Your changes could not be saved! Please make sure that you are online and try saving again.",
-            "pendingChanges": "All unsaved changes will be lost when leaving the exam! Are you sure that you want to continue?"
+            "pendingChanges": "All unsaved changes will be lost when leaving the exam! Are you sure that you want to continue?",
+            "abort": "Abort"
         },
         "exerciseGroup": {
             "created": "New exercise group created",
