--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -87,7 +87,7 @@
             "notSubmitted": "Aufgabe nicht eingereicht",
             "saveSubmissionError": "Die Änderungen konnten nicht gespeichert werden! Bitte stelle sicher, dass du online bist und speichere nochmal.",
             "pendingChanges": "Alle ungespeicherten Änderungen gehen beim Verlassen der Klausur verloren. Bist du sicher, dass du fortfahren möchtest?",
-            "abort": "Beenden",
+            "abort": "Vorzeitig abgeben",
             "continueAfterAbort": "Weitermachen",
             "continueAfterAbortDescription": "Du willst doch nicht vorzeitig abgeben?"
         },
