--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -89,7 +89,8 @@
             "pendingChanges": "Alle ungespeicherten Änderungen gehen beim Verlassen der Klausur verloren. Bist du sicher, dass du fortfahren möchtest?",
             "abort": "Vorzeitig abgeben",
             "continueAfterAbort": "Weitermachen",
-            "continueAfterAbortDescription": "Du willst doch nicht vorzeitig abgeben?"
+            "continueAfterAbortDescription": "Du willst doch nicht vorzeitig abgeben?",
+            "handInEarlyNotice": "Du bist dabei die Klausur vorzeitig abzugeben. Du kannst danach nicht mehr an der Klausur teilnehmen."
         },
         "exerciseGroup": {
             "created": "Neue Aufgabengruppe erstellt",
