--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -87,9 +87,9 @@
             "notSubmitted": "Aufgabe nicht eingereicht",
             "saveSubmissionError": "Die Änderungen konnten nicht gespeichert werden! Bitte stelle sicher, dass du online bist und speichere nochmal.",
             "pendingChanges": "Alle ungespeicherten Änderungen gehen beim Verlassen der Klausur verloren. Bist du sicher, dass du fortfahren möchtest?",
-            "abort": "Vorzeitig abgeben",
-            "continueAfterAbort": "Weitermachen",
-            "continueAfterAbortDescription": "Du willst doch nicht vorzeitig abgeben?",
+            "handInEarly": "Vorzeitig abgeben",
+            "continueAfterHandInEarly": "Weitermachen",
+            "continueAfterHandInEarlyDescription": "Du willst doch nicht vorzeitig abgeben?",
             "handInEarlyNotice": "Du bist dabei die Klausur vorzeitig abzugeben. Du kannst danach nicht mehr an der Klausur teilnehmen."
         },
         "exerciseGroup": {
