--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -87,9 +87,9 @@
             "notSubmitted": "Exercise not submitted",
             "saveSubmissionError": "Your changes could not be saved! Please make sure that you are online and try saving again.",
             "pendingChanges": "All unsaved changes will be lost when leaving the exam! Are you sure that you want to continue?",
-            "abort": "Hand in early",
-            "continueAfterAbort": "Continue",
-            "continueAfterAbortDescription": "You don't want to hand in yet?",
+            "handInEarly": "Hand in early",
+            "continueAfterHandInEarly": "Continue",
+            "continueAfterHandInEarlyDescription": "You don't want to hand in yet?",
             "handInEarlyNotice": "You are about to hand in before the end of the exam. After finishing the exam you cannot participate any longer."
         },
         "exerciseGroup": {
