Show result in exam summary page after result publication date (#1844)
Co-authored-by: Sebastian Jagla <57408107+sjagla27@users.noreply.github.com>

--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -12,7 +12,8 @@
                 "noSubmissionFound": "Du hast keine Lösung für diese Aufgabe abgegeben.",
                 "lastCommitHash": "Hash des letzten Commits",
                 "noCommitHash": "Lade neu, um den Commit Hash zu sehen.",
-                "studentSubmissionTo": "{{studentName}}s Abgabe für {{examTitle}}"
+                "studentSubmissionTo": "{{studentName}}s Abgabe für {{examTitle}}",
+                "viewResult": " Ergebnis ansehen"
             },
             "title": "Klausur",
             "startExam": "Starten",
