--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -12,7 +12,8 @@
                 "noSubmissionFound": "You didn't submit any solution for this exercise.",
                 "lastCommitHash": "Last Commit Hash",
                 "noCommitHash": "Reload to get the commit hash.",
-                "studentSubmissionTo": "{{studentName}}'s submission to {{examTitle}}"
+                "studentSubmissionTo": "{{studentName}}'s submission to {{examTitle}}",
+                "viewResult": " View Result"
             },
             "title": "Exam",
             "startExam": "Start",
