Show started, submitted and submission date in exam management

--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -111,6 +111,10 @@
             "searchForStudents": "Suche nach Studenten Logins oder Namen (Komma getrennt)",
             "student": "Student",
             "workingTime": "Bearbeitungszeit (mm:ss)",
+            "started": "Gestartet",
+            "submitted": "Abgegeben",
+            "submissionDate": "Abgabedatum",
+            "participationStatus": "Teilnahme-Status",
             "summary": "Zusammenfassung für den Studierenden",
             "result": "Ergebnis",
             "created": "Erstellt",
