--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -111,6 +111,10 @@
             "searchForStudents": "Search for students by login or name (comma separated)",
             "student": "Student",
             "workingTime": "Working time (mm:ss)",
+            "started": "Started",
+            "submitted": "Submitted",
+            "submissionDate": "Submission date",
+            "participationStatus": "Participation status",
             "summary": "Student Summary",
             "result": "Result",
             "created": "Created",
