Add new attributes to create/update form

--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -147,6 +147,9 @@
             "endDate": "Bearbeitungszeit bis",
             "publishResultsDate": "Veröffentlichung der Ergebnisse",
             "gracePeriod": "Karenzzeit (Sekunden)",
+            "examiner": "Prüfer",
+            "moduleNumber": "Modulnummer",
+            "courseName": "Kursname",
             "examStudentReviewStart": "Beginn der Klausureinsicht",
             "examStudentReviewEnd": "Ende der Klausureinsicht",
             "maxPoints": "Anzahl an erreichbaren Punkten",
