--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -147,6 +147,9 @@
             "endDate": "End of working time",
             "publishResultsDate": "Release Date of Results",
             "gracePeriod": "Grace period (seconds)",
+            "examiner": "Examiner",
+            "moduleNumber": "Module number",
+            "courseName": "Course name",
             "examStudentReviewStart": "Begin of Student Review",
             "examStudentReviewEnd": "End of Student Review",
             "maxPoints": "Maximum number of points in exam",
