Display everything on participation start screen

--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -18,6 +18,12 @@
             "title": "Klausur",
             "startExam": "Starten",
             "endExam": "Beenden",
+            "date": "Datum",
+            "time": "Zeit",
+            "durationWithFormat": "Dauer (mm:ss)",
+            "course": "Kurs",
+            "exercises": "Aufgaben",
+            "points": "Punkte",
             "summary": "Zusammenfassung",
             "visible": "Sichtbar",
             "startDate": "Beginn",
