--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -18,6 +18,12 @@
             "title": "Exam",
             "startExam": "Start",
             "endExam": "Finish",
+            "date": "Date",
+            "time": "Time",
+            "durationWithFormat": "Duration (mm:ss)",
+            "course": "Course",
+            "exercises": "Exercises",
+            "points": "Points",
             "summary": "Summary",
             "visible": "Visible",
             "startDate": "Start Date",
