Make exam grace period editable and display additional attributes on participation start cover (#1893)

--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -18,6 +18,12 @@
             "title": "Exam",
             "startExam": "Start",
             "endExam": "Finish",
+            "date": "Date",
+            "time": "Time",
+            "durationWithFormat": "Duration (mm:ss)",
+            "course": "Course",
+            "exercises": "Exercises",
+            "points": "Points",
             "summary": "Summary",
             "visible": "Visible",
             "startDate": "Start Date",
@@ -150,6 +156,10 @@
             "startDate": "Start of working time",
             "endDate": "End of working time",
             "publishResultsDate": "Release Date of Results",
+            "gracePeriod": "Grace period (seconds)",
+            "examiner": "Examiner",
+            "moduleNumber": "Module number",
+            "courseName": "Course name",
             "examStudentReviewStart": "Begin of Student Review",
             "examStudentReviewEnd": "End of Student Review",
             "maxPoints": "Maximum number of points in exam",
