--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -18,6 +18,12 @@
             "title": "Klausur",
             "startExam": "Starten",
             "endExam": "Beenden",
+            "date": "Datum",
+            "time": "Zeit",
+            "durationWithFormat": "Dauer (mm:ss)",
+            "course": "Kurs",
+            "exercises": "Aufgaben",
+            "points": "Punkte",
             "summary": "Zusammenfassung",
             "visible": "Sichtbar",
             "startDate": "Beginn",
@@ -150,6 +156,10 @@
             "startDate": "Bearbeitungszeit ab",
             "endDate": "Bearbeitungszeit bis",
             "publishResultsDate": "Veröffentlichung der Ergebnisse",
+            "gracePeriod": "Karenzzeit (Sekunden)",
+            "examiner": "Prüfer",
+            "moduleNumber": "Modulnummer",
+            "courseName": "Kursname",
             "examStudentReviewStart": "Beginn der Klausureinsicht",
             "examStudentReviewEnd": "Ende der Klausureinsicht",
             "maxPoints": "Anzahl an erreichbaren Punkten",
