Add missing result notice

--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -13,7 +13,8 @@
                 "lastCommitHash": "Hash des letzten Commits",
                 "noCommitHash": "Kein Commit wurde gemacht",
                 "studentSubmissionTo": "{{studentName}}s Abgabe für {{examTitle}}",
-                "viewResult": " Ergebnis ansehen"
+                "viewResult": " Ergebnis ansehen",
+                "missingResultNotice": "Es gibt derzeit kein Ergebnis für diese Quiz Aufgabe, obwohl die Ergebnisse schon veröffentlicht wurden. Bitte informiere deinen Instruktor."
             },
             "title": "Klausur",
             "startExam": "Starten",
