--- a/src/main/webapp/i18n/en/editor.json
+++ b/src/main/webapp/i18n/en/editor.json
@@ -92,7 +92,8 @@
                 "notAllowedExam": "You must not submit (anymore)",
                 "connectionTimeoutSave": "Saving failed. Please make sure you have a stable internet connection and try again.",
                 "undefined": "Action failed. Please make sure you have a stable internet connection and try again.",
-                "connectionTimeoutRefresh": "Refreshing failed. Please make sure you have a stable internet connection and try again."
+                "connectionTimeoutRefresh": "Refreshing failed. Please make sure you have a stable internet connection and try again.",
+                "resetFailed": "Your repository could not be reset."
             },
             "testStatusLabels": {
                 "noResult": "No results",
