--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -268,6 +268,7 @@
     },
     "studentExam": {
         "alreadySubmitted": "You have already submitted.",
-        "submissionNotInTime": "You can only submit between start and end of the exam."
+        "submissionNotInTime": "You have not submitted your exam on time. It will not be graded!",
+        "handInFailed": "Submission of your exam failed. Please try again!"
     }
 }
