--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -269,6 +269,6 @@
     "studentExam": {
         "alreadySubmitted": "Du hast bereits abgegeben.",
         "submissionNotInTime": "Du hast die Klausur nicht rechtzeitig abgegeben. Sie wird nicht bewertet!",
-        "handInFailed": "Die Abgabe der Klausur ist fehlgeschlagen. Bitte versuchen Sie es erneut!"
+        "handInFailed": "Die Abgabe der Klausur ist fehlgeschlagen. Bitte versuche es erneut!"
     }
 }
