--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -268,6 +268,7 @@
     },
     "studentExam": {
         "alreadySubmitted": "Du hast bereits abgegeben.",
-        "submissionNotInTime": "Du kannst nur zwischen Start und Ende der Klausur abgeben."
+        "submissionNotInTime": "Du hast die Klausur nicht rechtzeitig abgegeben. Sie wird nicht bewertet!",
+        "handInFailed": "Die Abgabe der Klausur ist fehlgeschlagen. Bitte versuche es erneut!"
     }
 }
