--- a/src/main/webapp/i18n/en/quizExercise.json
+++ b/src/main/webapp/i18n/en/quizExercise.json
@@ -168,7 +168,8 @@
                 "shortAnswerQuestionDuplicateMapping": "Question {{index}}: At least one mapping ist duplicated.",
                 "questionTitleLength": "Question {{index}}: Please shorten your question title. Currently it contains more than 250 signs.",
                 "quizTitleLength": "Quiz: The title is too long. Currently it contains more than 250 signs.",
-                "explanationIsMissing": "Question {{index}}: Not every answer option contains an explanation. Please add an explanation!"
+                "explanationIsMissing": "Question {{index}}: Not every answer option contains an explanation. Please add an explanation!",
+                "questionHasInvalidFlaggedElements": "<strong>Question {{index}} </strong>: This question has been marked previously as invalid or contains invalid elements."
             },
             "scoringType": {
                 "all_or_nothing": "All or Nothing",
@@ -180,6 +181,9 @@
                 "proportional_with_penalty": "Each correct answer results in a fraction of the total score. To avoid guesswork, the same fraction is subtracted from the achieved points for each mistake. Example: if the score of the question is 3 and there are 5 options. Each correct answer option results in 0.6 points. Each wrong answer option subtracts 0.6 points. A student with 4 correct and 1 wrong choice would then receive 1.8 points."
             },
             "importJSON": "Import Question(s) in JSON Format",
+            "importWarningShort": "Invalid questions found",
+            "importWarningLong": "The following questions have an invalid flag set. Are you sure you want to continue? <strong>If so, the invalid flags will be reset</strong>.",
+            "confirmImport": "Continue",
             "explanationText": {
                 "point": "point",
                 "points": "points",
