--- a/src/main/webapp/i18n/en/student-dashboard.json
+++ b/src/main/webapp/i18n/en/student-dashboard.json
@@ -99,7 +99,7 @@
                 "exerciseParticipatedAfterDueDate": "You have participated in {{ exercise }}, but after the due date.",
                 "noPointsForExercise": "You can't receive points for this exercise.",
                 "description": "Here you see all results that influence your score of the course, where the assessment due date is over.",
-                "reachableHelp": "Reachable points are the sum of the maximum points of all exercises that have been assessed, weren't participated or were participated in too late.",
+                "reachableHelp": "Reachable points are the sum of the maximum points of all exercises that have been assessed, weren't participated in or were participated in too late.",
                 "totalHelp": "Total points are the sum of the maximum points of all exercises of this type."
             },
             "lectureList": {
