--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -60,9 +60,12 @@
         "examScores": {
             "pointsAchievable": "{{ maxPoints }} Punkte erreichbar",
             "title": "Klausur Ergebnisse",
-            "titleColumn": "Titel",
-            "containedExercisesColumn": "Aufgaben in Gruppe",
-            "averagePointsColumn": "Durchschnittlich erreichte Punkte",
+            "titleExerciseGroupColumn": "Aufgabengruppe",
+            "titleExerciseColumn": "Aufgabe",
+            "averagePointsExerciseColumn": "Durchschnittliche Punkte (Aufgabe)",
+            "averagePointsGroupColumn": "Durchschnittliche Punkte (Aufgabengruppe)",
+            "noExerciseParticipantsColumn": "# Aufgaben Teilnehmer (gefiltert/total)",
+            "noExerciseGroupParticipantsFilteredColumn": "# Aufgabengruppen Teilnehmer gefiltert",
             "maximumPointsColumn": "Maximal erreichbare Punkte",
             "nameColumn": "Name",
             "loginColumn": "Login",
