--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -60,10 +60,13 @@
         "examScores": {
             "pointsAchievable": "{{ maxPoints }} Points achievable",
             "title": "Exam Scores",
-            "titleColumn": "Title",
-            "containedExercisesColumn": "Exercises in Group",
-            "averagePointsColumn": "Average Points achieved",
-            "maximumPointsColumn": "Maximum Points achievable",
+            "titleExerciseGroupColumn": "Exercise Group",
+            "titleExerciseColumn": "Exercise",
+            "averagePointsExerciseColumn": "Average Points (Exercise)",
+            "averagePointsGroupColumn": "Average Points (Exercise Group)",
+            "noExerciseParticipantsColumn": "# Exercise Participants (Filtered/Total)",
+            "noExerciseGroupParticipantsFilteredColumn": "# Exercise Group Participants Filtered",
+            "maximumPointsColumn": "Maximum Points",
             "nameColumn": "Name",
             "loginColumn": "Login",
             "eMailColumn": "E-Mail",
@@ -72,8 +75,8 @@
             "overallScoreColumn": "Overall Score (%)",
             "exportCSV": "Export Results as CSV",
             "examResultSummary": "{{ exercisesLength }} exercise groups, {{ studentsLength }} registered students",
-            "filterForSubmittedExams": "Only consider submitted exams",
-            "filterForNonEmptySubmissions": "Only consider exercises with at least on non-empty submission"
+            "filterForSubmittedExams": "Include only submitted exams",
+            "filterForNonEmptySubmissions": "Include only exercises with at least one non-empty submission"
         },
         "examParticipation": {
             "timer": "Time left: ",
