Calculate number of participants in exercise group

--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -64,8 +64,8 @@
             "titleExerciseColumn": "Aufgabe",
             "averagePointsExerciseColumn": "Durchschnittliche Punkte (Aufgabe)",
             "averagePointsGroupColumn": "Durchschnittliche Punkte (Aufgabengruppe)",
-            "noExerciseParticipantsColumn": "# Aufgaben Teilnehmer (gefiltert/total)",
-            "noExerciseGroupParticipantsFilteredColumn": "# Aufgabengruppen Teilnehmer gefiltert",
+            "noExerciseParticipantsColumn": "# Aufgaben Teilnehmer (Gefiltert/Total)",
+            "noExerciseGroupParticipantsFilteredColumn": "# Teilnehmer Aufgabengruppe (Gefiltert/Total)",
             "maximumPointsColumn": "Maximal erreichbare Punkte",
             "nameColumn": "Name",
             "loginColumn": "Login",
