Improve template, use isBlank to check for empty text submissions

--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -60,6 +60,8 @@
         "examScores": {
             "pointsAchievable": "{{ maxPoints }} Punkte erreichbar",
             "title": "Klausur Ergebnisse",
+            "exerciseStatisticsTitle": "Aufgaben Statistik",
+            "studentResultsTitle": "Studenten Ergebnisse",
             "titleExerciseGroupColumn": "Aufgabengruppe",
             "titleExerciseColumn": "Aufgabe",
             "averagePointsExerciseColumn": "Durchschnittliche Punkte (Aufgabe)",
