--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -60,6 +60,8 @@
         "examScores": {
             "pointsAchievable": "{{ maxPoints }} Points achievable",
             "title": "Exam Scores",
+            "exerciseStatisticsTitle": "Exercise Statistics",
+            "studentResultsTitle": "Student Results",
             "titleExerciseGroupColumn": "Exercise Group",
             "titleExerciseColumn": "Exercise",
             "averagePointsExerciseColumn": "Average Points (Exercise)",
