--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -64,11 +64,12 @@
             "studentResultsTitle": "Studenten Ergebnisse",
             "titleExerciseGroupColumn": "Aufgabengruppe",
             "titleExerciseColumn": "Aufgabe",
-            "averagePointsExerciseColumn": "Durchschnittliche Punkte (Aufgabe)",
-            "averagePointsGroupColumn": "Durchschnittliche Punkte (Aufgabengruppe)",
-            "noExerciseParticipantsColumn": "# Aufgaben Teilnehmer (Gefiltert/Total)",
-            "noExerciseGroupParticipantsFilteredColumn": "# Teilnehmer Aufgabengruppe (Gefiltert/Total)",
-            "maximumPointsColumn": "Maximal erreichbare Punkte",
+            "averageColumn": "Durchschnitt",
+            "participantsColumn": "Teilnehmer",
+            "averageExerciseTooltip": "Durchschnittlich erreichte Punkte für die Aufgabe. Die aktiven Filtereinstellungen beeinflussen diesen Wert.",
+            "averageExerciseGroupTooltip": "(Durchschnittlich / Maximal) erreichbare Punkte für die Aufgabengruppe. Die aktiven Filtereinstellungen beeinflussen den Wert des Durchschnitts.",
+            "participantsExerciseTooltip": "(Gefilterte / Totale) Anzahl an Teilnehmern für die Aufgabe. Die aktiven Filtereinstellungen beeinflussen nur den ersten Wert.",
+            "participantsExerciseGroupTooltip": "(Gefilterte / Totale) Anzahl an Teilnehmern für die Aufgabegruppe. Die aktiven Filtereinstellungen beeinflussen nur den ersten Wert.",
             "nameColumn": "Name",
             "loginColumn": "Login",
             "eMailColumn": "E-Mail",
