--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -64,11 +64,12 @@
             "studentResultsTitle": "Student Results",
             "titleExerciseGroupColumn": "Exercise Group",
             "titleExerciseColumn": "Exercise",
-            "averagePointsExerciseColumn": "Average Points (Exercise)",
-            "averagePointsGroupColumn": "Average Points (Exercise Group)",
-            "noExerciseParticipantsColumn": "# Exercise Participants (Filtered/Total)",
-            "noExerciseGroupParticipantsFilteredColumn": "# Exercise Group Participants (Filtered/Total)",
-            "maximumPointsColumn": "Maximum Points",
+            "averagePointsColumn": "Average",
+            "participantsColumn": "Participants",
+            "averageExerciseTooltip": "Average points achieved for the exercise. The activated filters affect this value.",
+            "averageExerciseGroupTooltip": "(Average / Maximum) points achieved for the exercise group. The activated filters affect the average value.",
+            "participantsExerciseTooltip": "(Filtered / Total) number of participants for the exercise. The activated filters only affect the first value.",
+            "participantsExerciseGroupTooltip": "(Filtered / Total) number of participants for the exercise group. The activated filters only affect the first value.",
             "nameColumn": "Name",
             "loginColumn": "Login",
             "eMailColumn": "E-Mail",
