Add max points for exercise

--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -66,8 +66,8 @@
             "titleExerciseColumn": "Aufgabe",
             "averageColumn": "Durchschnitt",
             "participantsColumn": "Teilnehmer",
-            "averageExerciseTooltip": "Durchschnittlich erreichte Punkte für die Aufgabe. Die aktiven Filtereinstellungen beeinflussen diesen Wert.",
-            "averageExerciseGroupTooltip": "(Durchschnittlich / Maximal) erreichbare Punkte für die Aufgabengruppe. Die aktiven Filtereinstellungen beeinflussen den Wert des Durchschnitts.",
+            "averageExerciseTooltip": "(Durchschnittliche / Maximale) Punktzahl für die Aufgabe. Die aktiven Filtereinstellungen beeinflussen den Durchschnitt.",
+            "averageExerciseGroupTooltip": "(Durchschnittliche / Maximale) Punktzahl für die Aufgabengruppe. Die aktiven Filtereinstellungen beeinflussen den Durchschnitt.",
             "participantsExerciseTooltip": "(Gefilterte / Totale) Anzahl an Teilnehmern für die Aufgabe. Die aktiven Filtereinstellungen beeinflussen nur den ersten Wert.",
             "participantsExerciseGroupTooltip": "(Gefilterte / Totale) Anzahl an Teilnehmern für die Aufgabegruppe. Die aktiven Filtereinstellungen beeinflussen nur den ersten Wert.",
             "nameColumn": "Name",
