--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -66,8 +66,8 @@
             "titleExerciseColumn": "Exercise",
             "averagePointsColumn": "Average",
             "participantsColumn": "Participants",
-            "averageExerciseTooltip": "Average points achieved for the exercise. The activated filters affect this value.",
-            "averageExerciseGroupTooltip": "(Average / Maximum) points achieved for the exercise group. The activated filters affect the average value.",
+            "averageExerciseTooltip": "(Average / Maximum) points achieved for the exercise. The activated filters affect the average.",
+            "averageExerciseGroupTooltip": "(Average / Maximum) points achieved for the exercise group. The activated filters affect the average.",
             "participantsExerciseTooltip": "(Filtered / Total) number of participants for the exercise. The activated filters only affect the first value.",
             "participantsExerciseGroupTooltip": "(Filtered / Total) number of participants for the exercise group. The activated filters only affect the first value.",
             "nameColumn": "Name",
