--- a/src/main/webapp/i18n/en/programmingExercise.json
+++ b/src/main/webapp/i18n/en/programmingExercise.json
@@ -94,12 +94,12 @@
                 "title": "Manage Test Cases",
                 "hideInactive": "Hide inactive test cases",
                 "showInactive": "Show inactivate test cases",
-                "resetWeights": "Reset weights",
-                "weightsReset": "The weights were reset successfully.",
-                "weightsResetFailed": "The weights could not be reset.",
-                "saveWeights": "Save weights",
-                "weightsUpdated": "The weights were updated successfully.",
-                "weightCouldNotBeUpdated": "The weights for the following test cases could not be updated: {{testCases}}.",
+                "reset": "Reset",
+                "resetSuccessful": "The tests were reset successfully.",
+                "resetFailed": "The tests could not be reset.",
+                "save": "Save tests",
+                "testsUpdated": "The tests were updated successfully.",
+                "testsCouldNotBeUpdated": "The following test cases could not be updated: {{testCases}}.",
                 "saveTestCases": "Save test cases",
                 "testCasesUpdated": "The test cases were updated successfully.",
                 "testCasesCouldNotBeUpdated": "The following test cases could not be updated: {{testCases}}.",
